# Home_Project

./: .gitignore  Makefile.Template
Interviews/: Makefile
Interviews/input/: Symmetric_String.txt
Interviews/src/: BinaryTree_DFS_BFS_Print.cpp  BinaryTree_DFS_BFS_Search.cpp  BinaryTree_MaxRootLeaf_Sum.cpp  BinaryTree_MinValue.cpp  BinaryTree_Sum_Value.cpp  Doubly_Linked_List.cpp  Function_Pointer.cpp  Graph_Connected_Components.cpp  Graph_Has_Path.cpp  Graph_Island_Count.cpp  Graph_Minimum_Island_Size.cpp  Graph_Shortest_Path.cpp  Graph_Undirected_Path.cpp  Hard_Ladder.cpp  LinkedList_Find_Value.cpp  LinkedList_Get_Value.cpp  LinkedList_PrintValues.cpp  LinkedList_Reverse_List.cpp  LinkedList_Sum_List.cpp  LinkedList_Zipper_Lists.cpp  Max_Line_Intersect.cpp  Move_semantics.cpp  Overloading.cpp  Postfix_Calculator.cpp  Singleton_Logging.cpp  Singly_Linked_List.cpp  Symmetric_String.cpp
Project_0_Testing/: CMakeLists.txt
Project_0_Testing/src/: Timer.cpp  main.cpp  main.cpp.bak
Project_0_Testing_CPP/: CMakeLists.txt
Project_0_Testing_CPP/src/: main.cpp  thread.cpp  thread.h
Project_0_Testing_CPP/tests/: CMakeLists.txt
Project_0_Testing_CPP/tests/src/: test.cpp
Project_10_Hackerrank/: Makefile
Project_10_Hackerrank/input/: Medium_AbstractClasses_input.txt  Medium_AttendingWorkshops.txt  Medium_AttributeParser_input.txt  Medium_AttributeParser_input2.txt
Project_10_Hackerrank/src/: Hard_LegoBlocks.cpp  Hard_VariadicClassTemplate.cpp  Interview_Question_Citadel.cpp  Medium_AbstractClasses.cpp  Medium_AttendingWorkshops.cpp  Medium_AttributeParser.cpp  Medium_AttributeParser2.cpp.bak
Project_11_Bank_Deposit/: Bank.data
Project_11_Bank_Deposit/src/: Account.cpp  Account.h  Bank.cpp  Bank.h  main.cpp
Project_12_Timer/: CMakeLists.txt
Project_13_SmartPointer/: Makefile
Project_13_SmartPointer/src/: Resource.h  SmartPtr.cpp  SmartPtr.h  main.cpp
Project_14_TicTacToe/src/: AI.h  TicTacToe.h  main.cpp
Project_15_Intervals/: CMakeLists.txt  Makefile
Project_15_Intervals/src/: intervalBlock.cpp  intervalBlock.h  intervals.cpp  intervals.h  main.cpp
Project_15_Intervals/src/Test/: CMakeLists.txt
Project_15_Intervals/src/Test/src/: test.cpp
Project_15_Intervals/src/Timer/: CMakeLists.txt  Makefile
Project_15_Intervals/src/Timer/src/: Timer.h
Project_15_Intervals/test/: CMakeLists.txt
Project_16_Websockets/: CMakeLists.txt  Makefile
Project_16_Websockets/src/: main.cpp
Project_17_LogClass/: CMakeLists.txt  Config.cmake.in
Project_17_LogClass/src/: Logging.h  main.cpp
Project_18_Multithread/: CMakeLists.txt
Project_18_Multithread/src/: main.cpp
Project_19_MPP_Log/: CMakeLists.txt
Project_19_MPP_Log/src/: MppBase.h  MppImpl.cpp  MppImpl.h  MppLog.cpp  MppLog.h  main.cpp
Project_1_mysql/: Database  Database.cpp  Database.h  Datatable.cpp  Datatable.h  Makefile  main.cpp
Project_20_AdvanceCPP/: CMakeLists.txt
Project_20_AdvanceCPP/src/: main.cpp
Project_21_CRTP/: CMakeLists.txt
Project_21_CRTP/src/: crtp_interface.h  main.cpp  normal_interface.h
Project_22_Behaviour_Design_Pattern/: CMakeLists.txt
Project_23_Pi_Calculation/: CMakeLists.txt
Project_23_Pi_Calculation/src/: main.cpp  random_pi.h
Project_23_Pi_Calculation/tests/: CMakeLists.txt
Project_23_Pi_Calculation/tests/src/: test.cpp
Project_24_ImGUI_Example/src/: app.h  app_base.h  main.cpp
Project_25_ImGUI_TicTacToe/: CMakeLists.txt
Project_25_ImGUI_TicTacToe/src/: ThreadPool.cpp  ThreadPool.h  ThreadQueue.h  ThreadWorker.cpp  ThreadWorker.h  TicTacToe.h  app_base.h  main.cpp  tictactoe.h
Project_25_Reinforced_Learning/: CMakeLists.txt
Project_26_Reinforced_Learning/: CMakeLists.txt  Makefile
Project_26_Reinforced_Learning/src/: main.cpp
Project_26_Reinforced_Learning/tests/: CMakeLists.txt
Project_26_Reinforced_Learning/tests/src/: test.cpp
Project_27_ThreadPool/: CMakeLists.txt  Config.cmake.in
Project_27_ThreadPool/src/: main.cpp
Project_27_ThreadPool/tests/: CMakeLists.txt
Project_27_ThreadPool/tests/src/: test.cpp
Project_28_SFINAE/: CMakeLists.txt
Project_28_SFINAE/src/: main.cpp
Project_28_SFINAE/tests/: CMakeLists.txt
Project_28_SFINAE/tests/src/: test.cpp
Project_2_socketClient/: client.cpp
Project_3_socketServer/: Makefile  server  server.cpp
Project_3_socketServer/src/: server.cpp
Project_4_Neural_Network/: Makefile
Project_4_Neural_Network/include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
Project_4_Neural_Network/src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
Project_5_Matrix/include/: Matrix.hpp
Project_6_PostgreSQL/: Makefile  main.cpp
Project_7_SFML_Chess/: Makefile
Project_7_SFML_Chess/src/: main.cpp
Project_8_ConsoleTable/: ConsoleTable  ConsoleTable.cpp  ConsoleTable.h  ConsoleTableRow.cpp  Makefile
Project_8_ConsoleTable/src/: ConsoleTableRow.h  main.cpp
Project_9_Codilty/: Makefile
Project_9_Codilty/src/: Lesson_10_CountFactors.cpp  Lesson_10_Flags.cpp  Lesson_10_MinPerimeterRectangle.cpp  Lesson_10_Peaks.cpp  Lesson_11_CountNonDivisible.cpp  Lesson_11_CountSemiPrimes.cpp  Lesson_12_ChocolatesByNumbers.cpp  Lesson_12_CommonPrimeDivisors.cpp  Lesson_13_FibFrog.cpp  Lesson_4_MaxCounters.cpp  Lesson_4_MissingInteger.cpp  Lesson_5_CountDiv.cpp  Lesson_5_GenomicRangeQuery.cpp  Lesson_5_MinAvgTwoSlice.cpp  Lesson_5_PassingCars.cpp  Lesson_6_Distinct.cpp  Lesson_6_MaxProductOfThree.cpp  Lesson_6_NumberOfDiscIntersections.cpp  Lesson_6_Triangle.cpp  Lesson_7_Brackets.cpp  Lesson_7_Fish.cpp  Lesson_7_Nesting.cpp  Lesson_7_StoneWall.cpp  Lesson_8_Dominator.cpp  Lesson_8_EquiLeader.cpp  Lesson_8_Leader.cpp  Lesson_9_MaxDoubleSliceSum.cpp  Lesson_9_MaxSliceSum.cpp  Lesson_9_Profit.cpp
Test_Project/: Makefile
